Next Patient working; TODO: empty processing for _patients If queue if emty, if client tabs 1.next patient it outs: "Patient queue is empty"

--- a/AASD_1lab_Client/AASD_1lab_Client.vcxproj.filters
+++ b/AASD_1lab_Client/AASD_1lab_Client.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="ActionHandler.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ConsoleHandler.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
