--- a/AASD_1lab_Client/AASD_1lab_Client.vcxproj
+++ b/AASD_1lab_Client/AASD_1lab_Client.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ActionHandler.h" />
+    <ClInclude Include="ConsoleHandler.h" />
     <ClInclude Include="Patient.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
